[package]
name = "xrunits"
version = "0.1.2"
authors = ["xstater <a166224@163.com>"]
keywords = ["unit"]
repository = "https://github.com/xstater/xrunits"
description = "A strong type unit library"
readme = "README.md"
documentation = "https://docs.rs/xrunits"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
